[package]
name = "tobira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tobira"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
humansize = "2.1.3"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
tree-sitter-highlight = "0.20.1"
tree-sitter-python = "0.20.2"
