[package]
name = "tobira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tobira"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
humansize = "2.1.3"
lazy_static = "1.4.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
strum = "0.24.1"
strum_macros = "0.24.3"
tree-sitter-c = "0.20.2"
tree-sitter-go = "0.19.1"
tree-sitter-highlight = "0.20.1"
tree-sitter-python = "0.20.2"
tree-sitter-rust = "0.20.3"
tree-sitter-typescript = "0.20.2"
